# mcp-openGauss

./: README.md
mcp_opengauss/: pyproject.toml
mcp_opengauss/src/openGauss_mcp_server/: __init__.py  server.py
mcp_opengauss/test/: conftest.py  requirements.txt  test_server.py
